Committing working version for seq2seq

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -74,7 +74,7 @@
       "source": [
         "from datasets import load_dataset\n",
         "\n",
-        "dataset = load_dataset(\"esnli\")"
+        "dataset = load_dataset(\"esnli\", download_mode=\"FORCE_REDOWNLOAD\")"
       ]
     },
     {
@@ -114,7 +114,7 @@
       "outputs": [],
       "source": [
         "n_train = 10000\n",
-        "n_valid = n_test = 1000\n",
+        "n_valid = n_test = 10000\n",
         "\n",
         "train_small = training_set.select(range(n_train))\n",
         "valid_small = validation_set.select(range(n_valid))\n",
@@ -169,9 +169,9 @@
         "    \"translate English to French: Hello Dre, I think the English version is ok for us.\",\n",
         "    return_tensors=\"pt\",\n",
         ").input_ids\n",
-        "outputs = model.generate(input_ids, max_new_tokens=100)\n",
+        "outputs = model.generate(input_ids, max_length = 20)\n",
         "\n",
-        "print(tokenizer.decode(outputs[0], skip_special_tokens=True, max_length=100))"
+        "print(tokenizer.decode(outputs[0], skip_special_tokens=True, max_length=20))"
       ]
     },
     {
@@ -355,7 +355,7 @@
         "id": "s4SNHcxuEWL3"
       },
       "source": [
-        "# 2.0 Tasks 1"
+        "# 2.0 Tasks"
       ]
     },
     {
@@ -486,7 +486,7 @@
         "training_args_ft = Seq2SeqTrainingArguments(\n",
         "    output_dir=\"task2\",\n",
         "    evaluation_strategy=\"epoch\",\n",
-        "    num_train_epochs=5,\n",
+        "    num_train_epochs=10,\n",
         "    predict_with_generate=True,\n",
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=16,\n",
@@ -553,7 +553,21 @@
         "id": "BMD_Zq5zEWL4"
       },
       "source": [
-        "# 2.3 Task 3: Making the model generate explanations"
+        "## 2.3 Task 3: Making the model generate explanations"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "We need to give as labels the label and the explanation tokenized."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Preparing the dataset with labelled explanations"
       ]
     },
     {
@@ -563,7 +577,182 @@
         "id": "fnW0W89cEWL4"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "dataset_explanations = load_dataset(\"explanations\", download_mode=\"FORCE_REDOWNLOAD\")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "training_set_ex = dataset_explanations[\"train\"]\n",
+        "validation_set_ex = dataset_explanations[\"validation\"]\n",
+        "test_set_ex = dataset[\"test\"]\n",
+        "\n",
+        "print(\"Shape of training_set: \", training_set_ex.shape)\n",
+        "print(\"Shae of validation_set: \", validation_set_ex.shape)\n",
+        "print(\"Shape of test_set: \", test_set_ex.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "n_train = 10000\n",
+        "n_valid = n_test = 10000\n",
+        "\n",
+        "train_small_ex = training_set_ex.select(range(n_train))\n",
+        "valid_small_ex = validation_set_ex.select(range(n_valid))\n",
+        "test_small_ex = test_set_ex.select(range(n_test))\n",
+        "\n",
+        "print(\"Shape of train_small: \", train_small_ex.shape)\n",
+        "print(\"Shape of valid_small: \", valid_small_ex.shape)\n",
+        "print(\"Shape of test_small: \", test_small_ex.shape)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "#### Tokenizing the dataset"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from functools import partial\n",
+        "from src.utils import tokenize_function_ex\n",
+        "import time"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "tokenize_mapping_ex = partial(tokenize_function_ex, tokenizer=tokenizer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_small_tokenized_ex = train_small.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
+        "valid_small_tokenized_ex = valid_small.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
+        "test_small_tokenized_ex = test_small.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
+        "\n",
+        "print(\"Shape of train_small_tokenized: \", train_small_tokenized_ex.shape)\n",
+        "print(\"Shape of valid_small_tokenized: \", valid_small_tokenized_ex.shape)\n",
+        "print(\"Shape of test_small_tokenized: \", test_small_tokenized_ex.shape)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_small_tokenized_ex = train_small_tokenized_ex.remove_columns(['label'])\n",
+        "valid_small_tokenized_ex = valid_small_tokenized_ex.remove_columns(['label'])\n",
+        "test_small_tokenized_ex = test_small_tokenized_ex.remove_columns(['label'])"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_small_tokenized_ex.features"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "### Fine Tuning"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "model_ft_ex = T5ForConditionalGeneration.from_pretrained(\"t5-small\")\n",
+        "data_collator_ft_ex = DataCollatorForSeq2Seq(tokenizer, model=model_ft_ex)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "training_args_ft_ex = Seq2SeqTrainingArguments(\n",
+        "    output_dir=\"task3\",\n",
+        "    evaluation_strategy=\"epoch\",\n",
+        "    num_train_epochs=5,\n",
+        "    predict_with_generate=True,\n",
+        "    per_device_train_batch_size=16,\n",
+        "    per_device_eval_batch_size=16,\n",
+        "    generation_max_length=128,\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer_ft_ex = Seq2SeqTrainer(\n",
+        "    model=model_ft_ex,\n",
+        "    args=training_args_ft_ex,\n",
+        "    train_dataset=train_small_tokenized,\n",
+        "    eval_dataset=valid_small_tokenized,\n",
+        "    # TODO: compute_metrics= COMPUTE METRICS FOR EXPLANATION (ROUGE?)\n",
+        "    data_collator=data_collator_ft_ex,\n",
+        "    tokenizer=tokenizer,\n",
+        ")"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.evaluate(train_small_tokenized_ex)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.train()"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trainer.evaluate(test_small_tokenized_ex)"
+      ]
     }
   ],
   "metadata": {
