--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -74,7 +74,7 @@
       "source": [
         "from datasets import load_dataset\n",
         "\n",
-        "dataset = load_dataset(\"esnli\", download_mode=\"FORCE_REDOWNLOAD\")"
+        "dataset = load_dataset(\"esnli\", download_mode=\"force_redownload\")"
       ]
     },
     {
@@ -578,7 +578,7 @@
       },
       "outputs": [],
       "source": [
-        "dataset_explanations = load_dataset(\"explanations\", download_mode=\"FORCE_REDOWNLOAD\")"
+        "dataset_explanations = load_dataset(\"explanations\", download_mode=\"force_redownload\")"
       ]
     },
     {
