--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -516,15 +516,6 @@
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "trainer.evaluate(train_small_tokenized)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -535,7 +526,7 @@
       },
       "outputs": [],
       "source": [
-        "trainer.train()"
+        "trainer_ft.train()"
       ]
     },
     {
@@ -544,7 +535,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "trainer.evaluate(test_small_tokenized)"
+        "trainer_ft.evaluate(test_small_tokenized)"
       ]
     },
     {
@@ -578,7 +569,7 @@
       },
       "outputs": [],
       "source": [
-        "dataset_explanations = load_dataset(\"explanations\", download_mode=\"force_redownload\")"
+        "dataset_explanations = load_dataset(\"esnli\", download_mode=\"force_redownload\")"
       ]
     },
     {
@@ -689,6 +680,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
+        "transform_accuracy_ex = partial(eval_pred_transform_accuracy, tokenizer = tokenizer, remove_explanations_from_label = True)\n",
+        "compute_accuracy_removing_explanations = partial(compute_metrics, pred_transform=transform_accuracy_ex, metric = evaluate.load('accuracy'))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
         "model_ft_ex = T5ForConditionalGeneration.from_pretrained(\"t5-small\")\n",
         "data_collator_ft_ex = DataCollatorForSeq2Seq(tokenizer, model=model_ft_ex)"
       ]
@@ -721,7 +722,7 @@
         "    args=training_args_ft_ex,\n",
         "    train_dataset=train_small_tokenized,\n",
         "    eval_dataset=valid_small_tokenized,\n",
-        "    # TODO: compute_metrics= COMPUTE METRICS FOR EXPLANATION (ROUGE?)\n",
+        "    compute_metrics = compute_accuracy_removing_explanations,\n",
         "    data_collator=data_collator_ft_ex,\n",
         "    tokenizer=tokenizer,\n",
         ")"
@@ -733,7 +734,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "trainer.evaluate(train_small_tokenized_ex)"
+        "trainer_ft_ex.evaluate(train_small_tokenized_ex)"
       ]
     },
     {
@@ -742,7 +743,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "trainer.train()"
+        "trainer_ft_ex.train()"
       ]
     },
     {
@@ -751,7 +752,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "trainer.evaluate(test_small_tokenized_ex)"
+        "trainer_ft_ex.evaluate(test_small_tokenized_ex)"
       ]
     }
   ],
