--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -56,6 +56,17 @@
       ]
     },
     {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "N_TRAIN = 1000\n",
+        "N_VAL = 1000\n",
+        "N_TEST = 1000"
+      ]
+    },
+    {
       "cell_type": "markdown",
       "metadata": {
         "id": "UZvGBSfFEWLv"
@@ -113,12 +124,9 @@
       },
       "outputs": [],
       "source": [
-        "n_train = 10000\n",
-        "n_valid = n_test = 5000\n",
-        "\n",
-        "train_small = training_set.select(range(n_train))\n",
-        "valid_small = validation_set.select(range(n_valid))\n",
-        "test_small = test_set.select(range(n_test))\n",
+        "train_small = training_set.select(range(N_TRAIN))\n",
+        "valid_small = validation_set.select(range(N_VAL))\n",
+        "test_small = test_set.select(range(N_TEST))\n",
         "\n",
         "print(\"Shape of train_small: \", train_small.shape)\n",
         "print(\"Shape of valid_small: \", valid_small.shape)\n",
@@ -427,6 +435,7 @@
         "    predict_with_generate=True,\n",
         "    per_device_eval_batch_size=16,\n",
         "    generation_max_length=32,\n",
+        "    metric_for_best_model=\"accuracy\",\n",
         ")"
       ]
     },
@@ -491,6 +500,7 @@
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=16,\n",
         "    generation_max_length=32,\n",
+        "    metric_for_best_model=\"accuracy\",\n",
         ")"
       ]
     },
@@ -593,12 +603,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "n_train = 10000\n",
-        "n_valid = n_test = 5000\n",
-        "\n",
-        "train_small_ex = training_set_ex.select(range(n_train))\n",
-        "valid_small_ex = validation_set_ex.select(range(n_valid))\n",
-        "test_small_ex = test_set_ex.select(range(n_test))\n",
+        "train_small_ex = training_set_ex.select(range(N_TRAIN))\n",
+        "valid_small_ex = validation_set_ex.select(range(N_VAL))\n",
+        "test_small_ex = test_set_ex.select(range(N_TEST))\n",
         "\n",
         "print(\"Shape of train_small: \", train_small_ex.shape)\n",
         "print(\"Shape of valid_small: \", valid_small_ex.shape)\n",
@@ -708,6 +715,7 @@
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=16,\n",
         "    generation_max_length=128,\n",
+        "    metric_for_best_model=\"accuracy\",\n",
         ")"
       ]
     },
