--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -144,15 +144,26 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "jyczhxOR-jwU"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "/Users/dre/Desktop/GitRepo/DreRnc/ExplainingExplanations/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+            "  from .autonotebook import tqdm as notebook_tqdm\n",
+            "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n",
+            "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
+          ]
+        }
+      ],
       "source": [
         "from transformers import T5Tokenizer, T5ForConditionalGeneration\n",
         "\n",
-        "tokenizer = T5Tokenizer.from_pretrained(\"t5-small\")\n",
+        "tokenizer = T5Tokenizer.from_pretrained(\"t5-small\", truncation=True, padding=True) \n",
         "model = T5ForConditionalGeneration.from_pretrained(\"t5-small\")"
       ]
     },
@@ -728,21 +739,12 @@
         "trainer_ft_ex = Seq2SeqTrainer(\n",
         "    model=model_ft_ex,\n",
         "    args=training_args_ft_ex,\n",
-        "    train_dataset=train_small_tokenized,\n",
-        "    eval_dataset=valid_small_tokenized,\n",
+        "    train_dataset=train_small_tokenized_ex,\n",
+        "    eval_dataset=valid_small_tokenized_ex,\n",
         "    compute_metrics = compute_accuracy_removing_explanations,\n",
         "    data_collator=data_collator_ft_ex,\n",
         "    tokenizer=tokenizer,\n",
         ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "trainer_ft_ex.evaluate(train_small_tokenized_ex)"
       ]
     },
     {
