working on task 2, ignoring the -100 both in predictions and labels

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -144,22 +144,11 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {
         "id": "jyczhxOR-jwU"
       },
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/dre/Desktop/GitRepo/DreRnc/ExplainingExplanations/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n",
-            "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n",
-            "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from transformers import T5Tokenizer, T5ForConditionalGeneration\n",
         "\n",
@@ -386,6 +375,7 @@
       "outputs": [],
       "source": [
         "import torch\n",
+        "from functools import partial\n",
         "import evaluate\n",
         "from src.utils import compute_metrics, eval_pred_transform_accuracy\n",
         "from transformers import Seq2SeqTrainingArguments, Seq2SeqTrainer, T5ForConditionalGeneration, DataCollatorForSeq2Seq\n"
@@ -403,8 +393,7 @@
         "    device = torch.device('cuda')\n",
         "else:\n",
         "    device = torch.device('cpu')\n",
-        "\n",
-        "model.to(device)\n",
+        "    \n",
         "device"
       ]
     },
@@ -601,7 +590,7 @@
       "source": [
         "training_set_ex = dataset_explanations[\"train\"]\n",
         "validation_set_ex = dataset_explanations[\"validation\"]\n",
-        "test_set_ex = dataset[\"test\"]\n",
+        "test_set_ex = dataset_explanations[\"test\"]\n",
         "\n",
         "print(\"Shape of training_set: \", training_set_ex.shape)\n",
         "print(\"Shae of validation_set: \", validation_set_ex.shape)\n",
@@ -656,9 +645,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "train_small_tokenized_ex = train_small.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
-        "valid_small_tokenized_ex = valid_small.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
-        "test_small_tokenized_ex = test_small.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
+        "train_small_tokenized_ex = train_small_ex.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
+        "valid_small_tokenized_ex = valid_small_ex.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
+        "test_small_tokenized_ex = test_small_ex.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
         "\n",
         "print(\"Shape of train_small_tokenized: \", train_small_tokenized_ex.shape)\n",
         "print(\"Shape of valid_small_tokenized: \", valid_small_tokenized_ex.shape)\n",
@@ -749,7 +738,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {},
       "outputs": [],
       "source": [
