--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -63,7 +63,9 @@
       "source": [
         "N_TRAIN = 1000\n",
         "N_VAL = 1000\n",
-        "N_TEST = 1000"
+        "N_TEST = 1000\n",
+        "\n",
+        "NUM_EPOCHS = 5"
       ]
     },
     {
@@ -300,8 +302,7 @@
       "outputs": [],
       "source": [
         "from functools import partial\n",
-        "from src.utils import tokenize_function\n",
-        "import time"
+        "from src.utils import tokenize_function"
       ]
     },
     {
@@ -323,13 +324,10 @@
       },
       "outputs": [],
       "source": [
-        "time_init = time.time()\n",
         "train_small_tokenized = train_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
         "valid_small_tokenized = valid_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
         "test_small_tokenized = test_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
-        "time_end = time.time()\n",
         "\n",
-        "print(\"Time taken to tokenize: \", time_end - time_init)\n",
         "print(\"Shape of train_small_tokenized: \", train_small_tokenized.shape)\n",
         "print(\"Shape of valid_small_tokenized: \", valid_small_tokenized.shape)\n",
         "print(\"Shape of test_small_tokenized: \", test_small_tokenized.shape)"
@@ -495,7 +493,7 @@
         "training_args_ft = Seq2SeqTrainingArguments(\n",
         "    output_dir=\"task2\",\n",
         "    evaluation_strategy=\"epoch\",\n",
-        "    num_train_epochs=10,\n",
+        "    num_train_epochs=NUM_EPOCHS,\n",
         "    predict_with_generate=True,\n",
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=16,\n",
@@ -626,8 +624,7 @@
       "outputs": [],
       "source": [
         "from functools import partial\n",
-        "from src.utils import tokenize_function_ex\n",
-        "import time"
+        "from src.utils import tokenize_function_ex"
       ]
     },
     {
@@ -710,7 +707,7 @@
         "training_args_ft_ex = Seq2SeqTrainingArguments(\n",
         "    output_dir=\"task3\",\n",
         "    evaluation_strategy=\"epoch\",\n",
-        "    num_train_epochs=5,\n",
+        "    num_train_epochs=NUM_EPOCHS,\n",
         "    predict_with_generate=True,\n",
         "    per_device_train_batch_size=16,\n",
         "    per_device_eval_batch_size=16,\n",
