saving small modifications

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -727,7 +727,7 @@
         "    args=training_args_ft_ex,\n",
         "    train_dataset=train_small_tokenized_ex,\n",
         "    eval_dataset=valid_small_tokenized_ex,\n",
-        "    compute_metrics = compute_accuracy_removing_explanations,\n",
+        "    compute_metrics=compute_accuracy_removing_explanations,\n",
         "    data_collator=data_collator_ft_ex,\n",
         "    tokenizer=tokenizer,\n",
         ")"
