--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -61,11 +61,35 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "N_TRAIN = 1000\n",
-        "N_VAL = 1000\n",
-        "N_TEST = 1000\n",
+        "size = {\n",
+        "    'n_train' : 10000\n",
+        "    'n_val' : 1000\n",
+        "    'n_test' : 1000\n",
+        "}\n",
         "\n",
         "NUM_EPOCHS = 5"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "FFt0woXsEWLx"
+      },
+      "source": [
+        "## 1.1 Loading Tokenizer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "jyczhxOR-jwU"
+      },
+      "outputs": [],
+      "source": [
+        "from transformers import T5Tokenizer\n",
+        "\n",
+        "tokenizer = T5Tokenizer.from_pretrained(\"t5-small\", truncation=True, padding=True)"
       ]
     },
     {
@@ -74,7 +98,7 @@
         "id": "UZvGBSfFEWLv"
       },
       "source": [
-        "## 1.1 Loading Dataset"
+        "## 1.2 Loading and Tokenizing Dataset"
       ]
     },
     {
@@ -86,251 +110,9 @@
       "outputs": [],
       "source": [
         "from datasets import load_dataset\n",
-        "\n",
-        "dataset = load_dataset(\"esnli\", download_mode=\"force_redownload\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "Zugxo8WgEWLw"
-      },
-      "outputs": [],
-      "source": [
-        "training_set = dataset[\"train\"]\n",
-        "validation_set = dataset[\"validation\"]\n",
-        "test_set = dataset[\"test\"]\n",
-        "\n",
-        "print(\"Shape of training_set: \", training_set.shape)\n",
-        "print(\"Shae of validation_set: \", validation_set.shape)\n",
-        "print(\"Shape of test_set: \", test_set.shape)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "k8kaX3QbEWLw"
-      },
-      "outputs": [],
-      "source": [
-        "training_set[0]"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "SLgS-BVbEWLx"
-      },
-      "outputs": [],
-      "source": [
-        "train_small = training_set.select(range(N_TRAIN))\n",
-        "valid_small = validation_set.select(range(N_VAL))\n",
-        "test_small = test_set.select(range(N_TEST))\n",
-        "\n",
-        "print(\"Shape of train_small: \", train_small.shape)\n",
-        "print(\"Shape of valid_small: \", valid_small.shape)\n",
-        "print(\"Shape of test_small: \", test_small.shape)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "FFt0woXsEWLx"
-      },
-      "source": [
-        "## 1.2 Loading T5 Model"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "jyczhxOR-jwU"
-      },
-      "outputs": [],
-      "source": [
-        "from transformers import T5Tokenizer, T5ForConditionalGeneration\n",
-        "\n",
-        "tokenizer = T5Tokenizer.from_pretrained(\"t5-small\", truncation=True, padding=True) \n",
-        "model = T5ForConditionalGeneration.from_pretrained(\"t5-small\")"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "g1nc40MHGQQx"
-      },
-      "source": [
-        "Test **zero-shot** on a random task."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "CKG-so0--7ug"
-      },
-      "outputs": [],
-      "source": [
-        "input_ids = tokenizer(\n",
-        "    \"translate English to French: Hello Dre, I think the English version is ok for us.\",\n",
-        "    return_tensors=\"pt\",\n",
-        ").input_ids\n",
-        "outputs = model.generate(input_ids, max_length = 20)\n",
-        "\n",
-        "print(tokenizer.decode(outputs[0], skip_special_tokens=True, max_length=20))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "RxesGnaFEWLz"
-      },
-      "source": [
-        "## 1.3 Zero-shot example to Verify Everything is Working"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "oVqJLHXJEWLz"
-      },
-      "outputs": [],
-      "source": [
-        "from src.utils import generate_prompt_mnli"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "BZILJcgoDO9b"
-      },
-      "outputs": [],
-      "source": [
-        "example = training_set[0]\n",
-        "example"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "ezSzRF_PEWLz"
-      },
-      "source": [
-        "Generating the prompt:\n",
-        "\n",
-        "<b><u> mnli hypothesis: </b></u> The St. Louis Cardinals have always won. <b><u> premise: </b></u> yeah well losing is i mean i’m i’m originally from Saint Louis and Saint Louis Cardinals when they were there were uh a mostly a losing team but\n",
-        "\n",
-        "Output:\n",
-        "* 0: Entailment\n",
-        "* 1: Neutral\n",
-        "* 2: Contradiction"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "7D2MQG6qJYnI"
-      },
-      "outputs": [],
-      "source": [
-        "prompt = generate_prompt_mnli(example)\n",
-        "prompt"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "C1roa6HcIi3e"
-      },
-      "outputs": [],
-      "source": [
-        "input_ids = tokenizer(prompt, return_tensors=\"pt\").input_ids\n",
-        "\n",
-        "outputs = model.generate(input_ids)\n",
-        "print(outputs)\n",
-        "print('Shape of outputs:', outputs.shape)\n",
-        "print('Shape of outputs[0]:', outputs[0].shape)\n",
-        "\n",
-        "print(tokenizer.decode(outputs[0], skip_special_tokens=True))"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "DQvhd35vEWL1"
-      },
-      "source": [
-        "## 1.4  Tokenize the dataset"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "BfF032XGEWL1"
-      },
-      "outputs": [],
-      "source": [
-        "train_small.info"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "K6EukG0TEWL1"
-      },
-      "outputs": [],
-      "source": [
-        "train_small.features"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "HbuROCKBEWL2"
-      },
-      "outputs": [],
-      "source": [
+        "from preprocess import prepare_dataset\n",
         "from functools import partial\n",
-        "from src.utils import tokenize_function"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "IlQmLxMtEWL2"
-      },
-      "outputs": [],
-      "source": [
-        "tokenize_mapping = partial(tokenize_function, tokenizer=tokenizer)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {
-        "id": "yRqHwqpOEWL3"
-      },
-      "outputs": [],
-      "source": [
-        "train_small_tokenized = train_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
-        "valid_small_tokenized = valid_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
-        "test_small_tokenized = test_small.map(tokenize_mapping, batched=True).with_format(\"torch\")\n",
-        "\n",
-        "print(\"Shape of train_small_tokenized: \", train_small_tokenized.shape)\n",
-        "print(\"Shape of valid_small_tokenized: \", valid_small_tokenized.shape)\n",
-        "print(\"Shape of test_small_tokenized: \", test_small_tokenized.shape)"
+        "from utils import tokenize_function"
       ]
     },
     {
@@ -339,20 +121,25 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "train_small_tokenized = train_small_tokenized.remove_columns(['label'])\n",
-        "valid_small_tokenized = valid_small_tokenized.remove_columns(['label'])\n",
-        "test_small_tokenized = test_small_tokenized.remove_columns(['label'])"
+        "dataset = load_dataset(\"esnli\", download_mode=\"force_redownload\")"
       ]
     },
     {
       "cell_type": "code",
       "execution_count": null,
-      "metadata": {
-        "id": "YH_OYIlBfXWR"
-      },
+      "metadata": {},
       "outputs": [],
       "source": [
-        "train_small_tokenized.features"
+        "tokenize_mapping= partial(tokenize_function, tokenizer=tokenizer)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "train_tok, valid_tok, test_tol = prepare_dataset(dataset, tokenize_mapping=tokenize_mapping, sizes = sizes)"
       ]
     },
     {
@@ -446,8 +233,8 @@
         "trainer = Seq2SeqTrainer(\n",
         "    model=model,\n",
         "    args=training_args,\n",
-        "    train_dataset=train_small_tokenized,\n",
-        "    eval_dataset=valid_small_tokenized,\n",
+        "    train_dataset=train_tok,\n",
+        "    eval_dataset=valid_tok,\n",
         "    compute_metrics=compute_accuracy,\n",
         "    data_collator=data_collator,\n",
         "    tokenizer=tokenizer,\n",
@@ -460,7 +247,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "trainer.evaluate(test_small_tokenized)"
+        "trainer.evaluate(test_tok)"
       ]
     },
     {
@@ -513,8 +300,8 @@
         "trainer_ft = Seq2SeqTrainer(\n",
         "    model=model_ft,\n",
         "    args=training_args_ft,\n",
-        "    train_dataset=train_small_tokenized,\n",
-        "    eval_dataset=valid_small_tokenized,\n",
+        "    train_dataset=train_tok,\n",
+        "    eval_dataset=valid_tok,\n",
         "    compute_metrics=compute_accuracy,\n",
         "    data_collator=data_collator_ft,\n",
         "    tokenizer=tokenizer,\n",
@@ -543,7 +330,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "trainer_ft.evaluate(test_small_tokenized)"
+        "trainer_ft.evaluate(test_tok)"
       ]
     },
     {
@@ -572,59 +359,21 @@
     {
       "cell_type": "code",
       "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from utils import tokenize_function_ex"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "id": "fnW0W89cEWL4"
       },
       "outputs": [],
       "source": [
         "dataset_explanations = load_dataset(\"esnli\", download_mode=\"force_redownload\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "training_set_ex = dataset_explanations[\"train\"]\n",
-        "validation_set_ex = dataset_explanations[\"validation\"]\n",
-        "test_set_ex = dataset_explanations[\"test\"]\n",
-        "\n",
-        "print(\"Shape of training_set: \", training_set_ex.shape)\n",
-        "print(\"Shae of validation_set: \", validation_set_ex.shape)\n",
-        "print(\"Shape of test_set: \", test_set_ex.shape)"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "train_small_ex = training_set_ex.select(range(N_TRAIN))\n",
-        "valid_small_ex = validation_set_ex.select(range(N_VAL))\n",
-        "test_small_ex = test_set_ex.select(range(N_TEST))\n",
-        "\n",
-        "print(\"Shape of train_small: \", train_small_ex.shape)\n",
-        "print(\"Shape of valid_small: \", valid_small_ex.shape)\n",
-        "print(\"Shape of test_small: \", test_small_ex.shape)"
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {},
-      "source": [
-        "#### Tokenizing the dataset"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from functools import partial\n",
-        "from src.utils import tokenize_function_ex"
       ]
     },
     {
@@ -642,13 +391,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "train_small_tokenized_ex = train_small_ex.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
-        "valid_small_tokenized_ex = valid_small_ex.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
-        "test_small_tokenized_ex = test_small_ex.map(tokenize_mapping_ex, batched=True).with_format(\"torch\")\n",
-        "\n",
-        "print(\"Shape of train_small_tokenized: \", train_small_tokenized_ex.shape)\n",
-        "print(\"Shape of valid_small_tokenized: \", valid_small_tokenized_ex.shape)\n",
-        "print(\"Shape of test_small_tokenized: \", test_small_tokenized_ex.shape)"
+        "train_tok_ex, valid_tok_ex, test_tok_ex = prepare_dataset(dataset=dataset_explanations, tokenize_mapping=tokenize_mapping_ex, sizes=sizes)"
       ]
     },
     {
@@ -657,18 +400,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "train_small_tokenized_ex = train_small_tokenized_ex.remove_columns(['label'])\n",
-        "valid_small_tokenized_ex = valid_small_tokenized_ex.remove_columns(['label'])\n",
-        "test_small_tokenized_ex = test_small_tokenized_ex.remove_columns(['label'])"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "train_small_tokenized_ex.features"
+        "train_tok_ex.features"
       ]
     },
     {
@@ -725,8 +457,8 @@
         "trainer_ft_ex = Seq2SeqTrainer(\n",
         "    model=model_ft_ex,\n",
         "    args=training_args_ft_ex,\n",
-        "    train_dataset=train_small_tokenized_ex,\n",
-        "    eval_dataset=valid_small_tokenized_ex,\n",
+        "    train_dataset=train_tok_ex,\n",
+        "    eval_dataset=valid_tok_ex,\n",
         "    compute_metrics=compute_accuracy_removing_explanations,\n",
         "    data_collator=data_collator_ft_ex,\n",
         "    tokenizer=tokenizer,\n",
@@ -735,7 +467,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 34,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -748,7 +480,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "trainer_ft_ex.evaluate(test_small_tokenized_ex)"
+        "trainer_ft_ex.evaluate(test_tok_ex)"
       ]
     }
   ],
