Saving dictionary in correct syntax

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -57,13 +57,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {},
       "outputs": [],
       "source": [
         "size = {\n",
-        "    'n_train' : 10000\n",
-        "    'n_val' : 1000\n",
+        "    'n_train' : 10000,\n",
+        "    'n_val' : 1000,\n",
         "    'n_test' : 1000\n",
         "}\n",
         "\n",
