Correcting errors in sizes

--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -61,7 +61,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "size = {\n",
+        "sizes = {\n",
         "    'n_train' : 10000,\n",
         "    'n_val' : 1000,\n",
         "    'n_test' : 1000\n",
@@ -139,7 +139,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "train_tok, valid_tok, test_tol = prepare_dataset(dataset, tokenize_mapping=tokenize_mapping, sizes = sizes)"
+        "train_tok, valid_tok, test_tok = prepare_dataset(dataset, tokenize_mapping=tokenize_mapping, sizes = sizes)"
       ]
     },
     {
