--- a/Explanations.ipynb
+++ b/Explanations.ipynb
@@ -22,13 +22,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "TBH5vSaqfXWE"
       },
       "outputs": [],
       "source": [
-        "colab = True"
+        "colab = False"
       ]
     },
     {
