--- a/Base.ipynb
+++ b/Base.ipynb
@@ -17,12 +17,12 @@
       },
       "source": [
         "Dataset : **E-SNLI**. \\\n",
-        "Model : **Small T5**."
+        "Model : **Base T5**."
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -31,7 +31,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -51,7 +51,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -73,24 +73,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "/Users/dre/Desktop/GitRepo/DreRnc/ExplainingExplanations/.venv/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
-            "  from .autonotebook import tqdm as notebook_tqdm\n",
-            "You are using the default legacy behaviour of the <class 'transformers.models.t5.tokenization_t5.T5Tokenizer'>. This is expected, and simply means that the `legacy` (previous) behavior will be used so nothing changes for you. If you want to use the new behaviour, set `legacy=False`. This should only be set if you understand what it means, and thoroughly read the reason why this was added as explained in https://github.com/huggingface/transformers/pull/24565\n",
-            "Special tokens have been added in the vocabulary, make sure the associated word embeddings are fine-tuned or trained.\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "from transformers import T5Tokenizer\n",
         "\n",
-        "tokenizer = T5Tokenizer.from_pretrained(\"t5-small\", truncation=True, padding=True)"
+        "tokenizer = T5Tokenizer.from_pretrained(\"t5-base\", truncation=True, padding=True)"
       ]
     },
     {
@@ -102,7 +91,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -114,22 +103,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 6,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Downloading data: 100%|██████████| 39.3M/39.3M [00:07<00:00, 5.34MB/s]\n",
-            "Downloading data: 100%|██████████| 1.62M/1.62M [00:00<00:00, 3.59MB/s]\n",
-            "Downloading data: 100%|██████████| 1.61M/1.61M [00:00<00:00, 3.33MB/s]\n",
-            "Generating train split: 100%|██████████| 549367/549367 [00:00<00:00, 2148441.60 examples/s]\n",
-            "Generating validation split: 100%|██████████| 9842/9842 [00:00<00:00, 1283153.77 examples/s]\n",
-            "Generating test split: 100%|██████████| 9824/9824 [00:00<00:00, 1300206.45 examples/s]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "dataset = load_dataset(\"esnli\", download_mode=\"force_redownload\")"
       ]
@@ -372,7 +348,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 7,
+      "execution_count": null,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -521,22 +497,9 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": null,
       "metadata": {},
-      "outputs": [
-        {
-          "name": "stderr",
-          "output_type": "stream",
-          "text": [
-            "Downloading data: 100%|██████████| 39.3M/39.3M [00:06<00:00, 6.07MB/s]\n",
-            "Downloading data: 100%|██████████| 1.62M/1.62M [00:00<00:00, 3.29MB/s]\n",
-            "Downloading data: 100%|██████████| 1.61M/1.61M [00:00<00:00, 3.25MB/s]\n",
-            "Generating train split: 100%|██████████| 549367/549367 [00:00<00:00, 2359731.98 examples/s]\n",
-            "Generating validation split: 100%|██████████| 9842/9842 [00:00<00:00, 1357861.25 examples/s]\n",
-            "Generating test split: 100%|██████████| 9824/9824 [00:00<00:00, 1395686.16 examples/s]\n"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "dataset = load_dataset(\"esnli\", download_mode=\"force_redownload\")"
       ]
@@ -881,7 +844,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.10.8"
+      "version": "3.10.12"
     }
   },
   "nbformat": 4,
