updating requirements.txt for coolab

--- a/Base.ipynb
+++ b/Base.ipynb
@@ -38,7 +38,7 @@
         "if colab:\n",
         "    !git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
         "    %cd ExplainingExplanations\n",
-        "    %pip install -r requirements.txt\n",
+        "    %pip install -r requirements_colab.txt\n",
         "    !git checkout seq2seq"
       ]
     },
