--- a/Base.ipynb
+++ b/Base.ipynb
@@ -548,9 +548,9 @@
       "source": [
         "from src.utils import tokenize_function_ex\n",
         "\n",
-        "tokenize_mapping_train = partial(tokenize_function_ex, tokenizer=tokenizer, modified_explanations = shuffled_explanations['train'])\n",
-        "tokenize_mapping_val = partial(tokenize_function_ex, tokenizer=tokenizer, modified_explanations = shuffled_explanations['validation'])\n",
-        "tokenize_mapping_test = partial(tokenize_function_ex, tokenizer=tokenizer, modified_explanations = shuffled_explanations['test'])\n",
+        "tokenize_mapping_train = partial(tokenize_function_ex, tokenizer=tokenizer, explanations = shuffled_explanations['train'])\n",
+        "tokenize_mapping_val = partial(tokenize_function_ex, tokenizer=tokenizer, explanations = shuffled_explanations['validation'])\n",
+        "tokenize_mapping_test = partial(tokenize_function_ex, tokenizer=tokenizer, explanations = shuffled_explanations['test'])\n",
         "\n",
         "tokenize_mappings = (tokenize_mapping_train, tokenize_mapping_val, tokenize_mapping_test)"
       ]
