Correctuing the removal of label column

--- a/Base.ipynb
+++ b/Base.ipynb
@@ -501,7 +501,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "dataset = load_dataset(\"esnli\", download_mode=\"force_redownload\")"
+        "dataset_shex = load_dataset(\"esnli\", download_mode=\"force_redownload\")"
       ]
     },
     {
@@ -519,7 +519,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "dirs = save_explanations(dataset)"
+        "dirs = save_explanations(dataset_shex)"
       ]
     },
     {
@@ -528,7 +528,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "dirs_shuffled = save_shuffled_explanations(dataset)"
+        "dirs_shuffled = save_shuffled_explanations(dataset_shex)"
       ]
     },
     {
@@ -570,9 +570,9 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "train_tok_shex = train_tok_shex.remove_columns([\"label\", \"explanation_1\", \"explanation_2\", \"explanation_3\"])\n",
-        "valid_tok_shex = valid_tok_shex.remove_columns([\"label\", \"explanation_1\", \"explanation_2\", \"explanation_3\"])\n",
-        "test_tok_shex = test_tok_shex.remove_columns([\"label\", \"explanation_1\", \"explanation_2\", \"explanation_3\"])"
+        "train_tok_shex = train_tok_shex.remove_columns([\"explanation_1\", \"explanation_2\", \"explanation_3\"])\n",
+        "valid_tok_shex = valid_tok_shex.remove_columns([\"explanation_1\", \"explanation_2\", \"explanation_3\"])\n",
+        "test_tok_shex = test_tok_shex.remove_columns([\"explanation_1\", \"explanation_2\", \"explanation_3\"])"
       ]
     },
     {
