Commiting final version to test

--- a/Base.ipynb
+++ b/Base.ipynb
@@ -528,7 +528,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "dirs_shuffled = save_shuffled_explanations(dataset_shex)"
+        "dirs_shuffled = save_shuffled_explanations(dirs)"
       ]
     },
     {
