Commiting final version of the notebook, working until syntactical tasks

--- a/Base.ipynb
+++ b/Base.ipynb
@@ -50,6 +50,13 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "Set parameters for the experiments."
+      ]
+    },
+    {
       "cell_type": "code",
       "execution_count": null,
       "metadata": {},
@@ -61,7 +68,10 @@
         "    'n_test' : 1000\n",
         "}\n",
         "\n",
-        "NUM_EPOCHS = 5"
+        "NUM_EPOCHS = 5\n",
+        "\n",
+        "# Whether to use the mnli prompt on which the model is pretrained or not\n",
+        "USE_MNLI_PROMPT = False"
       ]
     },
     {
@@ -116,7 +126,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "tokenize_mapping= partial(tokenize_function, tokenizer=tokenizer)"
+        "tokenize_mapping= partial(tokenize_function, tokenizer=tokenizer, use_mnli_format = USE_MNLI_PROMPT)"
       ]
     },
     {
@@ -370,7 +380,7 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "tokenize_mapping_ex = partial(tokenize_function_ex, tokenizer=tokenizer)"
+        "tokenize_mapping_ex = partial(tokenize_function_ex, tokenizer=tokenizer, use_mnli_format = USE_MNLI_PROMPT)"
       ]
     },
     {
@@ -548,9 +558,9 @@
       "source": [
         "from src.utils import tokenize_function_ex\n",
         "\n",
-        "tokenize_mapping_train = partial(tokenize_function_ex, tokenizer=tokenizer, explanations = shuffled_explanations['train'])\n",
-        "tokenize_mapping_val = partial(tokenize_function_ex, tokenizer=tokenizer, explanations = shuffled_explanations['validation'])\n",
-        "tokenize_mapping_test = partial(tokenize_function_ex, tokenizer=tokenizer, explanations = shuffled_explanations['test'])\n",
+        "tokenize_mapping_train = partial(tokenize_function_ex, tokenizer=tokenizer, explanations = shuffled_explanations['train'], use_mnli_format = USE_MNLI_PROMPT)\n",
+        "tokenize_mapping_val = partial(tokenize_function_ex, tokenizer=tokenizer, explanations = shuffled_explanations['validation'], use_mnli_format = USE_MNLI_PROMPT)\n",
+        "tokenize_mapping_test = partial(tokenize_function_ex, tokenizer=tokenizer, explanations = shuffled_explanations['test'], use_mnli_format = USE_MNLI_PROMPT)\n",
         "\n",
         "tokenize_mappings = (tokenize_mapping_train, tokenize_mapping_val, tokenize_mapping_test)"
       ]
