Commiting first attempt to sbert similarity eval

--- a/Base.ipynb
+++ b/Base.ipynb
@@ -142,6 +142,31 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "## 1.3 Loading SBERT for evaluating sentence similarity"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from sentence_transformers import SentenceTransformer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "sbert = SentenceTransformer('all-MiniLM-L6-v2')"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "# 2.0 Tasks"
       ]
     },
@@ -179,7 +204,7 @@
       "outputs": [],
       "source": [
         "transform_accuracy = partial(eval_pred_transform_accuracy, tokenizer = tokenizer)\n",
-        "compute_accuracy = partial(compute_metrics, pred_transform=transform_accuracy, metric = evaluate.load('accuracy'))"
+        "compute_accuracy = partial(compute_metrics, pred_transforms=transform_accuracy, metrics = evaluate.load('accuracy'))"
       ]
     },
     {
@@ -405,6 +430,55 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "### Defining the metrics: accuracy / similarity of explanations"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "from src.utils import eval_pred_transform_sbert\n",
+        "from sbert_metric import SbertMetric"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "transform_accuracy_ex = partial(eval_pred_transform_accuracy, tokenizer = tokenizer, remove_explanations_from_label = True)\n",
+        "accuracy = evaluate.load('accuracy')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "trasnform_sbert = partial(eval_pred_transform_sbert, tokenizer = tokenizer)\n",
+        "sbert_similarity = SbertMetric(sbert)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "transforms = [transform_accuracy_ex, trasnform_sbert]\n",
+        "metrics = [accuracy, sbert_similarity]\n",
+        "\n",
+        "compute_metrics_ex = partial(compute_metrics, pred_transforms=transforms, metrics=metrics)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
         "### Fine Tuning"
       ]
     },
@@ -415,16 +489,6 @@
       "outputs": [],
       "source": [
         "NUM_EPOCHS = 5"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "transform_accuracy_ex = partial(eval_pred_transform_accuracy, tokenizer = tokenizer, remove_explanations_from_label = True)\n",
-        "compute_accuracy_removing_explanations = partial(compute_metrics, pred_transform=transform_accuracy_ex, metric = evaluate.load('accuracy'))"
       ]
     },
     {
@@ -467,7 +531,7 @@
         "    args=training_args_ft_ex,\n",
         "    train_dataset=train_tok_ex,\n",
         "    eval_dataset=valid_tok_ex,\n",
-        "    compute_metrics=compute_accuracy_removing_explanations,\n",
+        "    compute_metrics=compute_metrics_ex,\n",
         "    data_collator=data_collator_ft_ex,\n",
         "    tokenizer=tokenizer,\n",
         ")"
@@ -607,24 +671,6 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "transform_accuracy_shex = partial(\n",
-        "    eval_pred_transform_accuracy,\n",
-        "    tokenizer=tokenizer,\n",
-        "    remove_explanations_from_label=True,\n",
-        ")\n",
-        "compute_accuracy_removing_explanations_shex = partial(\n",
-        "    compute_metrics,\n",
-        "    pred_transform=transform_accuracy_ex,\n",
-        "    metric=evaluate.load(\"accuracy\"),\n",
-        ")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
         "model_ft_shex = T5ForConditionalGeneration.from_pretrained(\"t5-base\")\n",
         "data_collator_ft_shex = DataCollatorForSeq2Seq(tokenizer, model=model_ft_ex)"
       ]
@@ -659,7 +705,7 @@
         "    args=training_args_ft_shex,\n",
         "    train_dataset=train_tok_shex,\n",
         "    eval_dataset=valid_tok_shex,\n",
-        "    compute_metrics=compute_accuracy_removing_explanations_shex,\n",
+        "    compute_metrics=compute_metrics_ex,\n",
         "    data_collator=data_collator_ft_shex,\n",
         "    tokenizer=tokenizer,\n",
         ")"
