Inverting for colab git cloning, not important

--- a/Base.ipynb
+++ b/Base.ipynb
@@ -38,8 +38,9 @@
         "if colab:\n",
         "    !git clone https://github.com/DreRnc/ExplainingExplanations.git\n",
         "    %cd ExplainingExplanations\n",
+        "    !git checkout seq2seq\n",
         "    %pip install -r requirements_colab.txt\n",
-        "    !git checkout seq2seq"
+        "    "
       ]
     },
     {
