Working version of sbert for explanations

--- a/Base.ipynb
+++ b/Base.ipynb
@@ -64,7 +64,7 @@
       "outputs": [],
       "source": [
         "sizes = {\n",
-        "    'n_train' : 10000,\n",
+        "    'n_train' : 1000,\n",
         "    'n_val' : 1000,\n",
         "    'n_test' : 1000\n",
         "}\n",
@@ -441,7 +441,7 @@
       "outputs": [],
       "source": [
         "from src.utils import eval_pred_transform_sbert\n",
-        "from sbert_metric import SbertMetric"
+        "from src.sbert_metric import SbertMetric"
       ]
     },
     {
